--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
-name: StaffModeDy
-main: StaffMode\Main
-author: lDynamicZx
-version: 1.8.5
+name: GamemodeUI
+main: Gamemode\Main
+author: lDynamicZx/Zerozepeda525
+version: 0.0.1
 api: 3.18.0
